# cv-plot-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/cv_plot/: plot.py  util.py  utils.py
src/cv_plot/core/: __init__.py  axes.py  drawable.py  projection.py
src/cv_plot/drawables/: __init__.py  axis.py  image.py  label.py  legend.py  line.py
src/cv_plot/gui/: mouse_adapter.py  mouse_event.py  show.py  window.py
